--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,12 +1,12 @@
 header{
-    height: 150vh;
+    height: 100vh;
     padding-top: 7rem;
     overflow: hidden;
 }
 
-.header_container {
+.header__container {
     text-align: center;
-    height: 100%;
+    height: 800%;
     position: relative;
 }
 
@@ -21,20 +21,20 @@ header{
 
 /*=================Header Socials=======================*/
 
-.header_Socials {
+.header__socials {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.9rem;
+    gap: 0.8rem;
     position: absolute;
     left: 0;
-    bottom: 4rem;
+    bottom: 3rem;
 }
 
-.header_Socials::after {
+.header__socials::after {
     content: "";
-    width: 3px;
-    height: 4rem;
+    width: 1px;
+    height: 2rem;
     background: var(--color-primary);
 }
 
@@ -42,8 +42,8 @@ header{
 
 .me {
     background: linear-gradient(var(--color-primary),transparent);
-    width: 25rem;
-    height: 28rem;
+    width: 22rem;
+    height: 30rem;
     position: absolute;
     left: cals(50% -11rem);
     margin-top: 4rem;
@@ -54,7 +54,7 @@ header{
 
 /*==============Scroll down =================*/
 
-.scroll_down {
+.scroll__down {
     position: absolute;
     right: -2.3rem;
     bottom: 5rem;
@@ -78,8 +78,8 @@ header{
     header {
         height: 100vh;
     }
-    .header_Socials,
-    .scroll_down{
+    .header__socials,
+    .scroll__down{
         display: none;
     }
     
