Updating build task

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -35,12 +35,18 @@
 /* =================== Media QUERIES (Medium devices) =============*/
 
 @media screen and (max-width: 1024px){
-    
+    .portfolio__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem;
+    }
     
 }
 
 /* =================== Media QUERIES (Small devices) =============*/
 
 @media screen and (max-width: 600px){
-  
+    .portfolio__container{
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
 }
