--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -5,7 +5,7 @@
 }
 
 .portfolio__items {
-    background: var(--color-bg-varient);
+    background: var(--color-bg);
     padding: 1.3rem;
     border-radius: 2rem;
     border: 1px solid transparent;
@@ -13,7 +13,7 @@
 }
 
 .portfolio__items:hover {
-    border-color: var(--color-primary-varient);
+    border-color: var(--color-primary);
     background: transparent;
 }
 
