--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -5,7 +5,7 @@
 }
 
 .experience__container > div {
-    background: var(--color-bg-varient);
+    background: var(--color-bg);
     padding: 2.4rem 5rem;
     border-radius: 2rem;
     border: 1px solid transparent;
