--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -5,7 +5,7 @@
 }
 
 .service {
-    background: var(--color-bg-varient);
+    background: var(--color-bg);
     border-radius: 0 0 2rem 2rem;
     border: 1px solid var(--color-primary);
     height: fit-content;
@@ -14,7 +14,7 @@
 
 .service:hover {
     background: transparent;
-    border-color: var(--color-primary-varient);
+    border-color: var(--color-primary);
     cursor: default;
 }
 
