--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,4 @@
-header{
+header {
     height: 100vh;
     padding-top: 7rem;
     overflow: hidden;
@@ -10,7 +10,7 @@ header{
     position: relative;
 }
 
-/*=============== CTA ================*/
+/*===================== CTA ==========================*/
 
 .cta {
     margin-top: 2.5rem;
@@ -24,10 +24,10 @@ header{
 .header__socials {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 0.8rem;
     position: absolute;
-    left: 0;
+    left: 1rem;
     bottom: 3rem;
 }
 
@@ -38,20 +38,23 @@ header{
     background: var(--color-primary);
 }
 
-/*================= ME =======================*/
+/*======================== ME ================================*/
 
 .me {
     background: linear-gradient(var(--color-primary),transparent);
     width: 22rem;
     height: 30rem;
     position: absolute;
-    left: cals(50% -11rem);
+    left: calc(50% -11rem);
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem, 1.5rem;
+    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    
 }
 
+
+ 
 /*==============Scroll down =================*/
 
 .scroll__down {
